--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
   design: "Design by"
   datthuy: "Pham Tat Dat - Nguyen Như Thuy"
   home: "Home"
-  help: "Help"
+  user_list: "User list"
   signup: "Signup"
   elearning: "E-learning"
   home_page: "Home page"
