--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  e_learning: "E-learning"
   manage: "Manage"
   admin_access: "You don't have access"
   save: "Save"
@@ -91,13 +92,19 @@ en:
       save: "Save changes"
       avatar: "Avatar"
     activities:
-      last_change: "Last changed at "
+      created_date: "Created date"
+      lesson: "Lesson"
       pass: "Pass"
       failed: "Failed"
       unfinished: "unfinished"
-      name: "Lesson: "
-      duration: "Duration:"
-      spend: "Spend time:"
+      name: "Lesson"
+      duration: "Duration"
+      spent_time: "Spend time"
+      result: "Result"
+      status0: "save"
+      status1: "unfinish"
+      status2: "pass"
+      status3: "fail"
     destroy:
       success: "Deleted account"
       danger: "Don't have permission to delete the account"
@@ -159,12 +166,6 @@ en:
     new:
       add: "Add course"
       chose: "- Choose Category -"
-  lesson_logs:
-    show:
-      day: "Days"
-      hours: "Hours"
-      minute: "Minutes"
-      second: "Seconds"
   lessons:
     create:
       success: "Created successfull"
@@ -268,9 +269,16 @@ en:
       add_answer: "Add answer"
       answers: "Answers"
       danger: "Lesson don't exist"
+      day: "Days"
+      hours: "Hours"
+      minute: "Minutes"
+      second: "Seconds"
     history:
       correct: "correct"
       uncorrect: "uncorrect"
+    form_lesson_log:
+      save: "Save"
+      finish: "Finish"
   choose_category:
     choose_category:
       all_category: "All lessons"
@@ -279,3 +287,6 @@ en:
       progress: "Progress:"
       sucessfull: "sucessfull"
       zero: "0.00%"
+  sessions:
+    form_log_in:
+      new_user: "New user?"
